--- a/style.css
+++ b/style.css
@@ -21,12 +21,12 @@ body {
   background-color: #ff0000;
   color: white;
 }
-.card h1 {
+.card .card-text h1 {
   font-family: Encode + Sans;
   font-weight: 900;
   margin: 0;
 }
-.card h2 {
+.card .card-text h2 {
   font-family: Montserrat;
   font-weight: 700;
   margin: 0;
