--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 
 .container {
   margin: 0 auto;
-  max-width: 60%;
+  max-width: 80%;
 }
 
 .logo {
@@ -21,6 +21,12 @@ body {
   background-color: #ff0000;
   color: white;
   padding: 5em;
+  border-radius: 4em;
+  /* display: flex;
+  justify-content: center;
+  flex-direction: column; */
+  margin: 3em auto;
+  width: 50%;
 }
 
 .card .card-text h1 {
