--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 .card {
   background-color: #ff0000;
   color: white;
-  padding: 5em;
+  padding: 4em;
   border-radius: 4em;
   /* display: flex;
   justify-content: center;
@@ -47,9 +47,12 @@ body {
 .card .social-links {
   fill: white;
   display: flex;
-  width: 5em;
-  padding: 1em;
+  padding: 2em 1em 1em 1em;
+  justify-content: flex-end;
+  /* padding: 1em 0; */
 }
-.card .social-links svg {
-  /* padding: 1em; */
+.card .social-links i {
+  /* height: 3em; */
+  font-size: 3em;
+  margin: 0 .2em;
 }
