--- a/style.css
+++ b/style.css
@@ -24,9 +24,6 @@ body {
   color: white;
   padding: 4em;
   border-radius: 4em;
-  /* display: flex;
-  justify-content: center;
-  flex-direction: column; */
   margin: 3em auto;
   width: 50%;
 }
@@ -49,10 +46,8 @@ body {
   display: flex;
   padding: 2em 1em 1em 1em;
   justify-content: flex-end;
-  /* padding: 1em 0; */
 }
 .card .social-links i {
-  /* height: 3em; */
   font-size: 3em;
-  margin: 0 .2em;
+  margin: 0 0.2em;
 }
