--- a/style.css
+++ b/style.css
@@ -8,6 +8,11 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+a {
+  text-decoration: none;
+  color: white;
+}
+
 .container {
   margin: 0 auto;
   max-width: 80%;
