--- a/style.css
+++ b/style.css
@@ -8,11 +8,13 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+/* Link Styles */
 a {
   text-decoration: none;
   color: white;
 }
 
+/* Site Styling */
 .container {
   margin: 0 auto;
   max-width: 80%;
