--- a/style.css
+++ b/style.css
@@ -33,7 +33,6 @@ a {
   margin: 3em auto;
   width: 50%;
 }
-
 .card .card-text h1 {
   font-family: Encode + Sans;
   font-weight: 900;
@@ -48,12 +47,42 @@ a {
   text-indent: 0.5%;
 }
 .card .social-links {
-  fill: white;
   display: flex;
-  padding: 2em 1em 1em 1em;
+  fill: white;
+  padding: 4em 0 0 0;
   justify-content: flex-end;
 }
 .card .social-links i {
   font-size: 3em;
   margin: 0 0.2em;
+}
+
+/* Mobile View */
+@media (max-width: 768px) {
+  .container {
+    max-width: 100%;
+    padding: 3em 1em;
+    margin: 0;
+  }
+
+  .logo {
+    display: flex;
+    justify-content: center;
+  }
+
+  .card {
+    padding: 2.8em 2.5em;
+    border-radius: 2em;
+    width: 70%;
+  }
+  .card .card-text h1 {
+    font-size: 2em;
+  }
+  .card .card-text h2 {
+    font-size: 1.3em;
+    margin-top: 0.4em;
+  }
+  .card .social-links i {
+    font-size: 2.3em;
+  }
 }
