--- a/style.css
+++ b/style.css
@@ -57,17 +57,17 @@ a {
   margin: 0 0.2em;
 }
 
-#easter {
+#dog-easter {
   /* width: 2em;
   height: 2em; */
-  background-color: #ff0000;
+  /* background-color: #ff0000;
   float: right;
   border-radius: 3em;
   display: flex;
   justify-content: center;
   align-items: center;
   color: white;
-  padding: 1em;
+  padding: 1em; */
   opacity: 0;
   animation: blinking 2s 5s infinite alternate ease-in;
 }
@@ -76,7 +76,7 @@ a {
 }
 @keyframes blinking {
   0% {
-    opacity: 0;
+    opacity: .3;
   }
   50% {
     opacity: .5;
