--- a/style.css
+++ b/style.css
@@ -8,23 +8,25 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-/* Link Styles */
+/* Global Site Link Styles */
 a {
   text-decoration: none;
   color: white;
 }
 
-/* Site Styling */
+/* Site Container */
 .container {
   margin: 0 auto;
   max-width: 80%;
   padding: 3em 0;
 }
 
+/* Logo / Image */
 .logo img {
   width: 6em;
 }
 
+/* Card */
 .card {
   background-color: #ff0000;
   color: white;
@@ -33,6 +35,8 @@ a {
   margin: 3em auto;
   width: 50%;
 }
+
+/* Card Text / Content */
 .card .card-text h1 {
   font-family: Encode + Sans;
   font-weight: 900;
@@ -46,13 +50,12 @@ a {
   font-size: 2em;
   text-indent: 0.5%;
 }
+
+/* Social Links / Card Buttons */
 .card .social-links {
-  /* display: flex; */
   display: flex;
-  /* fill: black; */
   padding: 3em 0 0 0;
   justify-content: flex-end;
-  /* padding: 0; */
   margin: 0;
 }
 .card .social-links i {
@@ -60,15 +63,9 @@ a {
   margin: 0.4em;
 }
 .card .social-links a {
-  /* background: purple; */
-  /* width: 100%; */
-  /* flex: 1;
-  margin: 1%; */
-  /* border-radius: 50%; */
   background: white;
   margin: 5px;
   color: black;
-  /* flex: 1 0 auto; */
   border-radius: 50%;
 }
 .card .social-links a:before {
@@ -80,17 +77,8 @@ a {
   background: #ff9090;
 }
 
+/* Easter Egg */
 #dog-easter {
-  /* width: 2em;
-  height: 2em; */
-  /* background-color: #ff0000;
-  float: right;
-  border-radius: 3em;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  padding: 1em; */
   opacity: 0;
   animation: blinking 2s 5s infinite alternate ease-in;
 }
@@ -112,19 +100,16 @@ a {
   margin-right: 0.3em;
 }
 
+/* Copyright */
 #copyright {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
   position: absolute;
   bottom: 0;
-  /* left: 0; */
-  /* margin: 0 auto; */
   font-family: Montserrat;
-  /* font-weight:400; */
 }
 #copyright p {
-  /* margin-bottom: 0; */
   padding: 0.3em;
 }
 
